--- a/fullscreen.html
+++ b/fullscreen.html
@@ -5,9 +5,15 @@
 		<link href="style.css" rel="stylesheet" type="text/css" />
 		<script type="text/javascript" src="jquery-1.4.4.min.js"></script>
 		<script type="text/javascript" src="jquery.tmpl.min.js"></script>
-        <script type="text/javascript" src="FullscreenImageViewer.js"></script>
-        <script type="text/javascript" src="DirectoryParserS3.js"></script>
-        <script type="text/javascript">
+    <script type="text/javascript" src="S3Settings.js"></script>
+    <script type="text/javascript" src="FullscreenImageViewer.js"></script>
+    <script type="text/javascript" src="S3DirectoryParser.js"></script>
+    <script type="text/javascript" src="S3FileDirMatcher.js"></script>
+    <script type="text/javascript" src="ImageResizer.js"></script>
+    <script type="text/javascript" src="ThumbnailGenerator.js"></script>
+    <script type="text/javascript" src="S3Uploader.js"></script>
+    <script type="text/javascript" src="FileUtils.js"></script>
+    <script type="text/javascript">
             jQuery(function($) {
                 var url = '/';
                 var queryString = window.location.search.substring(0);
@@ -29,14 +35,18 @@
 					prevImageTag: $(".change-image-prev"),
 					imageTags: [$("#main-image-0"), $("#main-image-1")],
                     url: url,
-					browserHighlightTag: $("#browser-highlight")
+					browserHighlightTag: $("#browser-highlight"),
+					directoryParser: djiaak.S3DirectoryParser(),
+					fileDirMatcher: djiaak.S3FileDirMatcher(),
+					thumbnailGenerator: djiaak.ThumbnailGenerator(64,64),
+					fileUploader: djiaak.S3Uploader(djiaak.s3Settings)
                 });
 				viewer.init();
             });
         </script>
 		<script id="browser-template" type="text/x-jquery-tmpl">
 			<span class="browser-image-container" data-index="${index}">
-				<img class="browser-image" src="${browserSrc}" style="width: ${browserWidth}px; height: ${browserHeight}px" />
+				<img class="browser-image" style="width: ${browserWidth}px; height: ${browserHeight}px" />
 			</span>
 		</script>
     </head>
