--- a/fullscreen.html
+++ b/fullscreen.html
@@ -5,14 +5,15 @@
 		<link href="style.css" rel="stylesheet" type="text/css" />
 		<script type="text/javascript" src="jquery-1.4.4.min.js"></script>
 		<script type="text/javascript" src="jquery.tmpl.min.js"></script>
-    <script type="text/javascript" src="S3Settings.js"></script>
+    <script type="text/javascript" src="Settings.js"></script>
     <script type="text/javascript" src="FullscreenImageViewer.js"></script>
     <script type="text/javascript" src="S3DirectoryParser.js"></script>
     <script type="text/javascript" src="S3FileDirMatcher.js"></script>
     <script type="text/javascript" src="ImageResizer.js"></script>
-    <script type="text/javascript" src="ThumbnailGenerator.js"></script>
+    <script type="text/javascript" src="S3ThumbnailGenerator.js"></script>
     <script type="text/javascript" src="S3Uploader.js"></script>
     <script type="text/javascript" src="FileUtils.js"></script>
+    <script type="text/javascript" src="UploadQueue.js"></script>
     <script type="text/javascript">
             jQuery(function($) {
                 var url = '/';
@@ -29,8 +30,10 @@
                 
                 viewer = new djiaak.FullscreenImageViewer({
                     mainImageTag: $("#main-image"),
-					browserTag: $("#browser"),
-					browserTemplate: $("#browser-template"),
+					browserTag: $("#img-browser"),
+					browserTemplate: $("#img-browser-template"),
+					folderBrowserTag: $("#folder-browser"),
+					folderBrowserTemplate: $("#folder-browser-template"),
 					nextImageTag: $(".change-image-next"),
 					prevImageTag: $(".change-image-prev"),
 					imageTags: [$("#main-image-0"), $("#main-image-1")],
@@ -38,13 +41,18 @@
 					browserHighlightTag: $("#browser-highlight"),
 					directoryParser: djiaak.S3DirectoryParser(),
 					fileDirMatcher: djiaak.S3FileDirMatcher(),
-					thumbnailGenerator: djiaak.ThumbnailGenerator(64,64),
-					fileUploader: djiaak.S3Uploader(djiaak.s3Settings)
+					thumbnailGenerator: djiaak.S3ThumbnailGenerator(64,64, djiaak.settings.thumbnailPath),
+					fileUploader: djiaak.S3Uploader(djiaak.settings.s3)
                 });
 				viewer.init();
             });
         </script>
-		<script id="browser-template" type="text/x-jquery-tmpl">
+		<script id="img-browser-template" type="text/x-jquery-tmpl">
+			<span class="browser-image-container" data-index="${index}">
+				<img class="browser-image" style="width: ${browserWidth}px; height: ${browserHeight}px" />
+			</span>
+		</script>
+		<script id="folder-browser-template" type="text/x-jquery-tmpl">
 			<span class="browser-image-container" data-index="${index}">
 				<img class="browser-image" style="width: ${browserWidth}px; height: ${browserHeight}px" />
 			</span>
@@ -56,7 +64,8 @@
 			<img class="main-image" id="main-image-1" style="display:none" />
 			<div class="change-image change-image-next">&gt;</div>
 			<div class="change-image change-image-prev">&lt;</div>
-			<div id="browser"></div>
+			<div id="img-browser"></div>
+			<div id="folder-browser"></div>
 			<span id="browser-highlight" style="display:none"></div>
         </div>
     </body>
