added folder preview

--- a/tree.html
+++ b/tree.html
@@ -113,7 +113,7 @@
 		</script>
 	</head>
 	<body>
-		<div id="main">
+		<div id="main" class="main">
 			<div id="browser" class="browser"></div>
 			<div id="image">
 				<img id="img" />
